--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ apps/web/dist/
 apps/web/.turbo/
 
 # firebase config
-firebase-service-account.json
+*/firebase-service-account.json
 
 # Express build (if any transpile step)
 apps/server/dist/
