--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
     "lib": [
-      "ESNext"
+      "ES2019",
+      "DOM"
     ],
+    "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "outDir": "dist",
     "rootDir": ".",
-    "paths": {
-    }
   },
   "include": [
     "**/*.ts"
