--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -16,7 +16,8 @@
     "**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "firebase-service-account.json"
   ],
   "extends": "../../tsconfig.json"
 }
